Fix mislead paragraph spacing in quilljs editor

--- a/decidim-core/app/assets/stylesheets/decidim/editor.scss
+++ b/decidim-core/app/assets/stylesheets/decidim/editor.scss
@@ -2,4 +2,10 @@
 
 .editor-container{
   margin-bottom: 1.5rem;
+
+  p{
+    line-height: $paragraph-lineheight;
+    margin-bottom: $paragraph-margin-bottom;
+    text-rendering: $paragraph-text-rendering;
+  }
 }
